Alterado versões de java e javaFx